tests/ui/parser/imports/non_utf8_import.sol
import "../auxiliary/non_utf8.sol"; //~ ERROR: stream did not contain valid UTF-8
